// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-stylesheet should create a stylesheet 1`] = `
{
  "content": [],
  "structuredContent": {
    "message": "Stylesheet created successfully",
    "path": "/_TestCreateStylesheet.css",
  },
}
`;

exports[`create-stylesheet should create stylesheet with parent folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "message": "Stylesheet created successfully",
    "path": "/_TestStylesheetParentFolder/_TestCreateStylesheet.css",
  },
}
`;

exports[`create-stylesheet should handle existing stylesheet name 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "A stylesheet with the same path already exists",
    "operationStatus": "AlreadyExists",
    "status": 400,
    "title": "Stylesheet already exists",
    "type": "Error",
  },
}
`;
